@@ -24,7 +24,7 @@
 #ifndef ARANGODB_LOGGER_LOG_TIME_FORMAT_H
 #define ARANGODB_LOGGER_LOG_TIME_FORMAT_H 1
 
-#include <iosfwd>
+#include <chrono>
 #include <string>
 #include <unordered_set>
 
@@ -59,9 +59,12 @@ std::unordered_set<std::string> getAvailableFormatNames();
 /// @brief derive the time format from the name
 TimeFormat formatFromName(std::string const& name);
 
-/// @brief writes the current time into the given buffer,
+/// @brief writes the given time into the given buffer,
 /// in the specified format
-void writeTime(std::string& out, TimeFormat format);
+void writeTime(std::string& out, 
+               TimeFormat format, 
+               std::chrono::system_clock::time_point tp,
+               std::chrono::system_clock::time_point startTp = std::chrono::system_clock::time_point());
 
 }  // namespace LogTimeFormats
 }  // namespace arangodb
