@@ -31,6 +31,11 @@
 #include "Logger/LogAppenderFile.h"
 #include "Logger/Logger.h"
 
+#include <date/date.h>
+
+#include <regex>
+#include <sstream>
+
 #ifdef TRI_HAVE_UNISTD_H
 #include <unistd.h>
 #endif
@@ -140,4 +145,124 @@ TEST_F(LoggerTest, test_fds_after_reopen) {
   EXPECT_NE(content.find("some other warning message"), std::string::npos);
 
   LogAppenderFile::closeAll();
+}
+
+TEST_F(LoggerTest, testTimeFormats) {
+  using namespace date;
+  using namespace std::chrono;
+
+  {
+    // server start time point
+    sys_seconds startTp;
+    {
+      std::istringstream in{"2016-12-11 13:59:55"};
+      in >> parse("%F %T", startTp);
+    }
+
+    // time point we are testing
+    sys_seconds tp;
+    {
+      std::istringstream in{"2016-12-11 14:02:43"};
+      in >> parse("%F %T", tp);
+    }
+
+    std::string out;
+    
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::Uptime, tp, startTp);
+    EXPECT_EQ("168", out);
+
+    ASSERT_TRUE(std::regex_match(out, std::regex("^[0-9]+$")));
+
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::UptimeMillis, tp, startTp);
+    EXPECT_EQ("168.000", out);
+    ASSERT_TRUE(std::regex_match(out, std::regex("^[0-9]+\\.[0-9]{3}$")));
+    
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::UptimeMicros, tp, startTp);
+    EXPECT_EQ("168.000000", out);
+    ASSERT_TRUE(std::regex_match(out, std::regex("^[0-9]+\\.[0-9]{6}$")));
+    
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::UnixTimestamp, tp, startTp);
+    EXPECT_EQ("1481464963", out);
+    
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::UnixTimestampMillis, tp, startTp);
+    EXPECT_EQ("1481464963.000", out);
+    
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::UnixTimestampMicros, tp, startTp);
+    EXPECT_EQ("1481464963.000000", out);
+    
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::UTCDateString, tp, startTp);
+    EXPECT_EQ("2016-12-11T14:02:43Z", out);
+
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::UTCDateStringMillis, tp, startTp);
+    EXPECT_EQ("2016-12-11T14:02:43.000Z", out);
+    
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::LocalDateString, tp, startTp);
+    ASSERT_TRUE(std::regex_match(out, std::regex("^[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}$")));
+  }
+  
+  {
+    // server start time point
+    sys_time<milliseconds> startTp;
+    {
+      std::istringstream in{"2020-12-02 11:57:02.701"};
+      in >> parse("%F %T", startTp);
+    }
+
+    // time point we are testing
+    sys_time<milliseconds> tp;
+    {
+      std::istringstream in{"2020-12-02 11:57:26.004"};
+      in >> parse("%F %T", tp);
+    }
+
+    std::string out;
+    
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::Uptime, tp, startTp);
+    EXPECT_EQ("23", out);
+    ASSERT_TRUE(std::regex_match(out, std::regex("^[0-9]+$")));
+
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::UptimeMillis, tp, startTp);
+    EXPECT_EQ("23.303", out);
+    ASSERT_TRUE(std::regex_match(out, std::regex("^[0-9]+\\.[0-9]{3}$")));
+    
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::UptimeMicros, tp, startTp);
+    EXPECT_EQ("23.303000", out);
+    ASSERT_TRUE(std::regex_match(out, std::regex("^[0-9]+\\.[0-9]{6}$")));
+    
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::UnixTimestamp, tp, startTp);
+    EXPECT_EQ("1606910246", out);
+    
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::UnixTimestampMillis, tp, startTp);
+    EXPECT_EQ("1606910246.004", out);
+    
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::UnixTimestampMicros, tp, startTp);
+    EXPECT_EQ("1606910246.004000", out);
+    
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::UTCDateString, tp, startTp);
+    EXPECT_EQ("2020-12-02T11:57:26Z", out);
+
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::UTCDateStringMillis, tp, startTp);
+    EXPECT_EQ("2020-12-02T11:57:26.004Z", out);
+    
+    out.clear();
+    LogTimeFormats::writeTime(out, LogTimeFormats::TimeFormat::LocalDateString, tp, startTp);
+    ASSERT_TRUE(std::regex_match(out, std::regex("^[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}$")));
+  }
 }
